# amgec26

./: .gitignore  LICENSE  README.md  hello.py  manage.py  pyproject.toml  requirements.txt
amgecws/: asgi.py  settings.py  urls.py  views.py  wsgi.py
skelton/: admin.py  apps.py  filters.py  forms.py  models.py  my_static_tags.py  urls.py  views.py  viewsregister.py
skelton/migrations/: 0001_initial.py
skelton/templates/: about.html  base.html  baseap.html  baseav.html  basebig.html  basetopic.html  basicbase.html  calendar.html  carousel.html  chairs.html  committee_orgnisation.html  committee_scientific.html  committees.html  contact.html  css_block.html  css_blockcoutmtag.html  fees.html  footer.html  head.html  history.html  important_message.html  index.html  information.html  js_block.html  keynotes.html  navbar.html  private.html  program.html  sponsors.html  sponsors_section.html  submission_instruction.html  timeline.html  topbar.html  topics.html  topicsidebar.html  workshop.html
submissions/: admin.py  forms.py  models.py  urls.py  views.py
submissions/migrations/: 0001_initial.py  0002_remove_abstractsubmission_filename.py
submissions/templates/: abstractsubmission.html
